--- a/SpringCoreHelloWorld/pom.xml
+++ b/SpringCoreHelloWorld/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.srccodes.example.spring</groupId>
   <artifactId>SpringCoreHelloWorld</artifactId>
-  <packaging>war</packaging>
+  <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>SpringCoreHelloWorld</name>
   <url>http://maven.apache.org</url>
