--- a/maven-java-web-application/sampleWebApp/pom.xml
+++ b/maven-java-web-application/sampleWebApp/pom.xml
@@ -45,10 +45,25 @@ Also show cases the 'Simple Logging Framework - slf4j'.</description>
 					<warName>mywebapp</warName>
 				</configuration>
 			</plugin>
+
+                      <plugin>
+
+          <groupId>org.apache.tomcat.maven</groupId>
+          <artifactId>tomcat7-maven-plugin</artifactId>
+          <version>2.2</version>
+        </plugin>
 		</plugins>
 		<!-- shown as an example, second priority for the WAR name -->
 		<finalName>mywebappNameSecondOption</finalName>
 	</build>
+
+<distributionManagement>
+    <repository>
+      <id>internal.repo</id>
+      <name>MyCo Internal Repository</name>
+      <url>Host to Company Repository</url>
+    </repository>
+  </distributionManagement>
 
 	<dependencies>
 		<dependency>
