--- a/maven_demo/pom.xml
+++ b/maven_demo/pom.xml
@@ -1,12 +1,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+
   <modelVersion>4.0.0</modelVersion>
   <groupId>demo.project_mohan</groupId>
   <artifactId>maven_demo</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
+
   <name>maven_demo Maven Webapp</name>
   <url>http://maven.apache.org</url>
+
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -15,7 +18,19 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
   <build>
     <finalName>maven_demo</finalName>
+ <plugin>
+          <groupId>org.apache.tomcat.maven</groupId>
+          <artifactId>tomcat7-maven-plugin</artifactId>
+          <version>2.2</version>
+          <configuration>
+         <url>http://192.168.10.145/manager</url>
+          <server>tomcat</server>
+          <path>/{project.arttifactid}</path>
+           </configuration>
+
+  </plugin>
   </build>
 </project>
