--- a/mavenproj/webapptesting/pom.xml
+++ b/mavenproj/webapptesting/pom.xml
@@ -7,7 +7,7 @@
   <version>1.0-SNAPSHOT</version>
   <name>webapptesting Maven Webapp</name>
   <url>http://maven.apache.org</url>
-  <dependencies>
+  <dependenciesi>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -16,22 +16,5 @@
     </dependency>
   </dependencies>
   <build>
-    <finalName>webapptesting</finalName>
-<plugins>
-<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>tomcat-maven-plugin</artifactId>
-				<configuration>
-					<url>http://192.168.10.48:8080/manager-gui-/html</url>
-					<server>mytomcat</server>
-				<path>/webapptesting</path>
-				</configuration>
-</plugin>
-</plugins>
-
-
-
-
-
   </build>
 </project>
