--- a/maven_demo/pom.xml
+++ b/maven_demo/pom.xml
@@ -27,7 +27,7 @@
           <artifactId>tomcat7-maven-plugin</artifactId>
           <version>2.2</version>
           <configuration>
-         <url>http://http://52.42.120.49:8080/manager/html</url>
+         <url>http://52.42.120.49:8080/manager/html</url>
           <server>tomcat</server>
           <path>/webapps</path>
            </configuration>
