--- a/maven_demo/pom.xml
+++ b/maven_demo/pom.xml
@@ -27,9 +27,10 @@
           <artifactId>tomcat7-maven-plugin</artifactId>
           <version>2.2</version>
           <configuration>
-         <url>http://52.42.120.49:8080/manager/html</url>
+         <url>http://52.42.120.49:8080/manager/text</url>
           <server>tomcat</server>
-          <path>/webapps</path>
+           <username>tomcat</username>
+           <password>tomcat</password>
            </configuration>
 
   </plugin>
