--- a/mavendemo/pom.xml
+++ b/mavendemo/pom.xml
@@ -20,14 +20,14 @@
   </dependencies>
 
   <build>
-    <finalName>maven_demo</finalName>
+    <finalName>mavendemo</finalName>
 <plugins>
  <plugin>
           <groupId>org.apache.tomcat.maven</groupId>
           <artifactId>tomcat7-maven-plugin</artifactId>
           <version>2.2</version>
           <configuration>
-         <url>http://52.42.120.49:8080/manager/text</url>
+         <url>http://34.211.78.202:8080/manager/text</url>
           <server>tomcat</server>
            <username>tomcat</username>
            <password>tomcat</password>
