--- a/maven_demo/pom.xml
+++ b/maven_demo/pom.xml
@@ -7,7 +7,7 @@
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
 
-  <name>maven_demo Maven Webapp</name>
+  <name>maven_demo Webapp</name>
   <url>http://maven.apache.org</url>
 
   <dependencies>
